# rust-solana-simple-app

./: .gitignore  .gitlab-ci.yml  README.md  run.sh
client/: Cargo.toml
client/src/: lib.rs  sol_client.rs  utils.rs
client/src/client/: main.rs
client/src/price_sender/: external.rs  main.rs
program/: Cargo.toml
program/src/: lib.rs
