[package]
name = "index_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.9.2"
solana-client = "1.9.2"
yaml-rust = "0.4.5"
thiserror = "1.0.30"
home = "0.5.3"
borsh = { version = "0.9.1", features = ["const-generics"] }
tokio = { version = "1.15.0", features = ["full"] }
serde_json = "1.0.72"
serde = { version = "1.0.132", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "price_sender"
path = "src/price_sender/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"