[package]
name = "index_program"
version = "0.1.0"
edition = "2021"

[features]
# https://docs.solana.com/developing/on-chain-programs/developing-rust#project-layout
#
# When toggled on this feature will cause the crate to not compile a
# bpf entrypoint.
#
# See the corresponding `#[cfg(not(feature = "exclude_entrypoint"))]`
# in lib.rs. This is needed so that other Solana programs can import
# helper functions from this library without causing symbol conflicts
# with our entrypoint.
exclude_entrypoint = []

[dependencies]
solana-program = "1"
borsh = { version = "0.9.1", features = ["const-generics"] }

[lib]
name = "index_lib"
crate-type = ["cdylib", "lib"]
